Dev get Orders list route
