# backend/controller/checkout.js
@@ -21,6 +21,7 @@ exports.checkout = async (req, res, next) => {
     const totalPrice = userCart.totalPrice;
 
     const checkoute = await checkoutModel.create({
+      user: user._id,
       firstName,
       lastName,
       productItems: userCart.items,
@@ -37,6 +38,24 @@ exports.checkout = async (req, res, next) => {
       message: "Your order has been successfully placed",
       checkoute,
     });
+  } catch (err) {
+    next(err);
+  }
+};
+
+exports.getOrdersList = async (req, res, next) => {
+  try {
+    const user = req.user;
+
+    const checkoutList = await checkoutModel.findOne({ user: user._id });
+
+    await checkoutList.populate({
+      path: "productItems.product",
+      select:
+        "-categoryId -description -label -rating -size -attributes -createdAt -updatedAt -__v",
+    });
+
+    return successResponse(res, 200, { checkoutList });
   } catch (err) {
     next(err);
   }
